ubuntu-dev-tools (0.96) UNRELEASED; urgency=low

  [ Michael Bienia ]
  * ubuntu-build: missed updating a function call.

  [ Emmet Hikory ]
  * mk-sbuild: Really don't use build-arm-chroot

 -- Emmet Hikory <persia@ubuntu.com>  Tue, 09 Mar 2010 08:32:50 +0900

ubuntu-dev-tools (0.95) lucid; urgency=low

  * Update reverse-build-depends for lucid

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 08 Mar 2010 13:33:47 +0000

ubuntu-dev-tools (0.94) lucid; urgency=low

  [ Luca Falavigna ]
  * docs/lp-set-dup.1: add manpage for lp-set-dup.
  * debian/control: bump Standards-Version to 3.8.4, no changes needed.

  [ Emmet Hikory ]
  * mk-sbuild: switch to use qemu-debootstrap for foreign chroots
  * mk-sbuild: allow any foreign chroot (may not work, but we can try)
  * pbuilder-dist: allow any foreign chroot (may not work, but we can try)
  * docs/pbuilder-dist.1: update manpage to indicate general architecture
  * pbuilder-dist: add self. before target_distro in powerpc check

 -- Emmet Hikory <persia@ubuntu.com>  Mon, 08 Mar 2010 20:45:09 +0900

ubuntu-dev-tools (0.93) lucid; urgency=low

  [ Scott Moser ]
  * rename mk-sbuild-lv to mk-sbuild, support union-type=aufs

  [ Emmet Hikory ]
  * Support qemu-arm-static -> qemu-kvm-extras-static transition
  * mk-sbuild: automatically install qemu-kvm-extras-static if requested
  * mk-sbuild: conditionally install lvm2 only for lvm-snapshot schroots
  * mk-sbuild: rationalise architecture variables
  * mk-sbuild: Generalise --type support and add "file" SCHROOT_TYPE
  * mk-sbuild.1: Document the --type argument

  [ Loïc Minier ]
  * Demote qemu-kvm-extras-static to a Suggests since most people don't build
    for armel.

  [ Kees Cook ]
  * requestsync: add -C to allow manually adding changelog when missing
    (LP: #518574).
  * mk-sbuild: clean up and make slight adjustments to new lvm/dir/file logic.
  * mk-sbuild.1: update documentation to reflect alternative config file