@@ -71,7 +71,7 @@ License v2 can be found in `/usr/share/common-licenses/GPL-2'.
 
 dch-repeat, get-branches, get-build-deps, grab-attachments, grab-merge,
 hugdaylist, manage-credentials, massfile, mk-sbuild, pbuilder-dist-simple,
-ppaput, pull-debian-debdiff, pull-debian-source, pull-lp-source, pull-revu-source,
+pull-debian-debdiff, pull-debian-source, pull-lp-source, pull-revu-source,
 setup-packaging-environment, suspicious-source, ubuntu-build and what-patch are
 licensed under the GNU General Public License, version 3:
 
