@@ -75,8 +75,7 @@ def filter_unsolved(task):
     subscriptions = set(s.person.name for s in task.bug.subscriptions) #this is expensive, parse name out of self_link instead?
     if (task.status != "Fix Committed" and
         (not task.assignee or task.assignee.name in ['motu','desktop-bugs']) and
-         'ubuntu-main-sponsors' not in subscriptions and
-         'ubuntu-universe-sponsors' not in subscriptions and
+         'ubuntu-sponsors' not in subscriptions and
          'ubuntu-archive' not in subscriptions):
         return True
     return False
